# mockingbird

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
bot/: classifier.py  config.py  fetchers.py  main.py
bot/prompts/: exploit-classifier.md
scripts/: login.py
